(lang dune 3.14)

(name KAT_Decompile)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name KAT_Decompile)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends (ocaml (>= 5.1)) dune unionFind (ounit2 :with-test) (qcheck :with-test))
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
